@@ -16,6 +16,7 @@
 
 use strict;
 use warnings;
+no warnings 'experimental::smartmatch';
 
 use EBox;
 use EBox::Config;
