@@ -1,3 +1,5 @@
+HEAD
+	+ Avoid warning flag on smart match experimental feature
 3.5
 	+ Depend on zentyal-samba for Kerberos integration
 	+ Force haproxy restart if service status changes
