@@ -1,3 +1,5 @@
+HEAD
+	+ Avoid warning flag on smart match experimental feature
 3.5
 	+ Setup roaming profiles for each user only when the setting changes
 	  in the UI
